--- a/style.css
+++ b/style.css
@@ -22,9 +22,10 @@
             padding: 0;
             border: 0;
             font-size: 100%;
-            font: inherit;
+            font: Futura;
             vertical-align: baseline;
         }
+        
         /* HTML5 display-role reset for older browsers */
         article, aside, details, figcaption, figure, 
         footer, header, hgroup, menu, nav, section {
@@ -54,9 +55,9 @@
 
 
 html {
-    font-family: 'Roboto', Helvetica, Arial, sans-serif;
+    font-family: Futura;
     font-weight: 400;
-    font-size: 14px;
+    font-size: 16px;
     color: #292929;
     background-color: #eee; 
     background: url(images/background.jpg) no-repeat top center fixed; 
@@ -84,8 +85,8 @@ strong {
 }
 
 h1, h2, h3, h4, h5, h6 {
-    font-family: 'Rubik Mono One', Helvetica, Arial, sans-serif; 
-    font-weight: 
+    font-family: Futura; 
+    font-weight: 700;
 }
 
 header {
@@ -287,6 +288,39 @@ img.star6 {
         width: 100%;        
     }
 }
-}
     
     
+/* Add a black background color to the top navigation */
+.topnav {
+    overflow: hidden;
+  }
+  
+  /* Style the links inside the navigation bar */
+  .topnav a {
+    float: right;
+    display: block;
+    color: #E8396D;
+    text-align: center;
+    padding: 14px 16px;
+    text-transform: uppercase;
+    font-size: 16px;
+    font-weight: 700;
+    text-decoration: none;
+  }
+  
+  /* Change the color of links on hover */
+  .topnav a:hover {
+    background-color: #ddd;
+    color: #E8396D;
+  }
+  
+  /* Add an active class to highlight the current page */
+  .topnav a.active {
+    text-decoration: underline;
+    color: #E8396D;
+  }
+  
+  /* Hide the link that should open and close the topnav on small screens */
+  .topnav .icon {
+    display: none;
+  }
