--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@
         time, mark, audio, video {
             margin: 0;
             padding: 0;
-            border: 0;
+            border: 16px;
             font-size: 100%;
             font: Futura;
             vertical-align: baseline;
@@ -114,17 +114,38 @@ header h1 {
         header h1 {
             font-size: 3.5em;
         }
+        h2 {
+            font-size: 1.2em;
+        }
+        .rightColumn h3 {
+            font-size: 6em;
+        }
     }
 
     @media screen and (max-width: 1000px) {
         header h1 {
             font-size: 3em;
         }
+         h2 {
+            font-size: 1.1em;
+        }
+        .rightColumn h3 {
+            font-size: 5em;
+        }
     }
 
     @media screen and (max-width: 800px) {
         header h1 {
-            font-size: 2em;
+            font-size: 2.5em;
+        }
+         h2 {
+            font-size: 1em;
+        }
+        .rightColumn h3 {
+            font-size: 4em;
+        }
+        .rightColumn{
+            flex-wrap: wrap;
         }
     }
 
@@ -146,8 +167,7 @@ main {
 
 h2 {
     color: #FD156C;  
-    padding-top: 2em;
-    font-size: 16px;
+    padding-top: 1em;
     line-height: 1.5em;
     text-transform: uppercase;
 }
@@ -166,6 +186,8 @@ h2 {
     font-size: 16px;
     text-transform: uppercase;
     line-height: 1.5em;
+    padding-bottom: 1rem;
+    padding-top: 2rem;
 }
 
 .leftColumn h4 {
@@ -188,7 +210,7 @@ h2 {
 }
 
 .rightColumn h3 {
-    font-size: 7em;
+    font-size: 6em;
     line-height: 1em;
     padding-bottom: .08em;
     border-bottom: .1em solid #F0F0F0;
@@ -197,7 +219,6 @@ h2 {
 }
 
 .rightColumn p {
-    font-size: .7em;
     padding-bottom: 4em;
     line-height: 1.8em;
 }
@@ -231,11 +252,11 @@ h2 {
     margin-bottom: .5em;
 }
 
-.leftColumn h4 {
+/* .leftColumn h4 {
     font-family: 'Roboto';
     font-weight: 500;
     line-height: 1.8em;
-}
+} */
 
 p, ul, ol {
     line-height: 1.5em;
@@ -253,8 +274,9 @@ li {
 
 
 footer {
-    font-size: .5em;
-    padding: 8em 2em 2em 2em;
+    font-size: .8em;
+    float: center;
+    padding: 4em 2em 2em 2em;
     clear: both;
     
 }
@@ -307,38 +329,67 @@ img.star6 {
     }
 }
     
+/* ----------Navigation----------- */
     
-/* Add a black background color to the top navigation */
 .topnav {
-    overflow: hidden;
+    /* overflow: hidden; */
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: flex-end;
+    align-items: center;
   }
   
   /* Style the links inside the navigation bar */
   .topnav a {
-    float: right;
     display: block;
-    color: #E8396D;
+    color: #006CFF;
     text-align: center;
-    padding: 14px 16px;
+    padding: 18px 24px;
     text-transform: uppercase;
     font-size: 16px;
     font-weight: 700;
     text-decoration: none;
   }
   
-  /* Change the color of links on hover */
   .topnav a:hover {
     background-color: #ddd;
-    color: #E8396D;
+    color: #006CFF;
   }
   
-  /* Add an active class to highlight the current page */
   .topnav a.active {
     text-decoration: underline;
-    color: #E8396D;
+    color: #006CFF;
   }
   
   /* Hide the link that should open and close the topnav on small screens */
   .topnav .icon {
     display: none;
+  }
+
+  @media screen and (max-width: 650px) {
+    .topnav a:not(none) {display: none;}
+    .topnav a.icon {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+        align-items: center;
+      /* float: right;
+      display: block; */
+      
+    }
+  }
+  
+  @media screen and (max-width: 650px) {
+    .topnav.responsive {position: relative;}
+    .topnav.responsive a.icon {
+      position: relative;
+      right: 0;
+      top: 0;
+    }
+    .topnav.responsive a {
+      float: right;
+      display: block;
+      text-align: left;
+      background-color: #ddd;
+    }
   }
