--- a/style.css
+++ b/style.css
@@ -5,6 +5,9 @@
    License: none (public domain)
 */
 
+@import url("fonts/futura/fontstyle.css");
+
+
         html, body, div, span, applet, object, iframe,
         h1, h2, h3, h4, h5, h6, p, blockquote, pre,
         a, abbr, acronym, address, big, cite, code,
@@ -56,6 +59,7 @@
 
 html {
     font-family: Futura;
+    src: local('Futura Std');
     font-weight: 400;
     font-size: 16px;
     color: #292929;
@@ -381,7 +385,7 @@ img.star6 {
   
   @media screen and (max-width: 650px) {
     .topnav.responsive {position: relative;}
-    .topnav.responsive a.icon {
+    .topnav.responsive .icon {
       position: relative;
       right: 0;
       top: 0;
