--- a/style.css
+++ b/style.css
@@ -5,8 +5,6 @@
    License: none (public domain)
 */
 
-@import url("fonts/futura/fontstyle.css");
-
 
         html, body, div, span, applet, object, iframe,
         h1, h2, h3, h4, h5, h6, p, blockquote, pre,
@@ -58,9 +56,9 @@
 
 
 html {
-    font-family: Futura;
+    font-family: 'Nunito Sans', sans-serif;
     src: local('Futura Std');
-    font-weight: 400;
+    font-weight: 600;
     font-size: 16px;
     color: #292929;
     background-color: #eee; 
@@ -77,7 +75,7 @@ html * {
 }
 
 strong {
-    font-weight: 500;
+    font-weight: 900;
 }
 
 .blue {
@@ -112,6 +110,7 @@ header img {
 header h1 {
     font-size: 4em;
     color: #5F5F5F;
+    font-weight: 900;
 }
 
     @media screen and (max-width: 1300px) {
@@ -158,6 +157,7 @@ h1 span {
     display: inline-block;
     color: #FD156C;
     text-transform: uppercase;
+    font-weight: 900;
 }
 
 main {
@@ -174,6 +174,7 @@ h2 {
     padding-top: 1em;
     line-height: 1.5em;
     text-transform: uppercase;
+    font-weight: 800;
 }
 
 .leftColumn {
@@ -192,6 +193,7 @@ h2 {
     line-height: 1.5em;
     padding-bottom: 1rem;
     padding-top: 2rem;
+    font-weight: 900;
 }
 
 .leftColumn h4 {
@@ -351,7 +353,7 @@ img.star6 {
     padding: 24px 18px;
     text-transform: uppercase;
     font-size: 16px;
-    font-weight: 700;
+    font-weight: 900;
     text-decoration: none;
   }
   
